# dev-browser

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
cli/: Cargo.toml  llm-guide.txt
cli/src/: connection.rs  daemon.rs  main.rs  skill.rs
daemon/: package.json  pnpm-lock.yaml
daemon/src/: browser-manager-pages.test.ts  browser-manager.ts  daemon.ts  protocol.ts
daemon/src/sandbox/: quickjs-sandbox.ts
daemon/src/sandbox/__tests__/: auto-connect.test.ts  sandbox-integration.test.ts
test/https-server/: package-lock.json  package.json
